# LangChain_RAG

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  routes.py  schemas.py
backend/: __init__.py  main.py  models.py  requirements.txt  services.py
contracts/: __init__.py  backend_service.py  errors.py  graph_repository.py  models.py
docs/: graphdb.md  neo4j_chroma.md  分工.md  接口设计.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1784637108574-84f31351de1288.mjs
frontend/src/: App.vue  api.js  styles.css
graphdb/: __init__.py  chroma_client.py  cypher_queries.py  database_repository.py  embedding.py  hybrid_retriever.py  mock_graph_repository.py  neo4j_client.py  vector_store.py
neo4j_chroma/: __init__.py  chroma_client.py  config.py  cypher_queries.py  database_repository.py  embedding.py  graph_repository_adapter.py  hybrid_retriever.py  neo4j_client.py  vector_store.py
rag/: __init__.py  backend_service_impl.py  config.py  document_loader.py  document_processor.py  entity_extractor.py  intent_router.py  llm_client.py  prompt_builder.py  query_rewriter.py  rag_pipeline.py  reranker.py  retriever.py  session_store.py
scripts/: clear_chroma.py  clear_neo4j.py  init_neo4j.py
tests/: test_chroma_client.py  test_database_repository.py  test_document_processor.py  test_entity_extractor.py  test_graphdb_integration.py  test_hybrid_retriever.py  test_neo4j_chroma_integration.py  test_neo4j_client.py  test_rag_pipeline.py  test_vector_store.py
(+4 files in other folders)
