[project]
name = "langchain-rag-fastapi"
version = "0.1.0"
description = "FastAPI backend and Vue frontend for a LangChain GraphRAG text QA project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "PyMuPDF>=1.23.0",
    "chromadb>=1.0.12",
    "neo4j>=5.20.0",
    "python-docx>=0.8.11",
    "python-multipart>=0.0.9",
    "requests>=2.28.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
